@@ -144,3 +144,5 @@ Changes after KPresenter 1.2
 - Add new lineSpacing type :"At least"/"exactly"/"Multiple"
 - Use new kospell API
 - Allow to copy/paste image/embedded object from different kpresenter app, thanks to David to implement koStoreDrag
+- Now right button gives spell check result
+
